--- a/crates/semantic_index/Cargo.toml
+++ b/crates/semantic_index/Cargo.toml
@@ -21,6 +21,7 @@ gpui.workspace = true
 language.workspace = true
 log.workspace = true
 heed = { git = "https://github.com/meilisearch/heed", features = ["read-txn-no-tls"] }
+open_ai.workspace = true
 project.workspace = true
 settings.workspace = true
 serde.workspace = true
