Properly generate TaskIds when resolving tasks

--- a/crates/task/Cargo.toml
+++ b/crates/task/Cargo.toml
@@ -13,9 +13,11 @@ anyhow.workspace = true
 collections.workspace = true
 futures.workspace = true
 gpui.workspace = true
+hex.workspace = true
 schemars.workspace = true
 serde.workspace = true
 serde_json_lenient.workspace = true
+sha2.workspace = true
 shellexpand.workspace = true
 subst = "0.3.0"
 util.workspace = true
