--- a/crates/semantic_index/Cargo.toml
+++ b/crates/semantic_index/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "semantic_index"
+description = "Process, chunk, and embed text as vectors for semantic search."
 version = "0.1.0"
 edition = "2021"
+publish = false
+license = "GPL-3.0-or-later"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
