--- a/crates/semantic_index/Cargo.toml
+++ b/crates/semantic_index/Cargo.toml
@@ -6,9 +6,6 @@ edition = "2021"
 publish = false
 license = "GPL-3.0-or-later"
 
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 path = "src/semantic_index.rs"
 
@@ -19,11 +16,11 @@ clock.workspace = true
 collections.workspace = true
 fs.workspace = true
 futures.workspace = true
-futures-batch = "0.6.1"
+futures-batch.workspace = true
 gpui.workspace = true
 language.workspace = true
 log.workspace = true
-heed = { git = "https://github.com/meilisearch/heed", features = ["read-txn-no-tls"] }
+heed.workspace = true
 open_ai.workspace = true
 project.workspace = true
 settings.workspace = true
